add basic styling to the plan textin roadmapmodal. #5830

--- a/openscholar/themes/os_basetheme/css/global.pages.css
+++ b/openscholar/themes/os_basetheme/css/global.pages.css
@@ -854,6 +854,10 @@ position: relative;
 margin: -5px -20px;
 }
  
+.page-roadmap strong:first-child {
+font-size:18px;
+} 
+ 
 /** MEDIA BROWSER MODAL OVERRIDES **/
 	
 
