fix draggable display for thumbnails in pub form.

--- a/openscholar/modules/custom/media_draggable/css/media_draggable.widget.css
+++ b/openscholar/modules/custom/media_draggable/css/media_draggable.widget.css
@@ -12,6 +12,8 @@
 .field-widget-media-draggable-file .droppable-message {
   line-height: inherit;
   padding: 10px 0;
+  height:30px;
+  line-height: 30px
 }
 
 .field-widget-media-draggable-file .droppable-standard-upload {
@@ -56,4 +58,15 @@ padding: 2px;
 border: 1px solid #ccc;
 text-align: center;
 margin: 5px 0;
+width: 550px;
+}
+
+.droppable-standard-upload {
+	display: inline-block;
+}
+
+
+.field-name-field-biblio-image.field-widget-dragndrop-upload-image .droppable-message {
+	height:50px;
+	line-height: 50px;
 }
