min width on pub cover div. #5855

--- a/openscholar/themes/custom/gking/css/gking.css
+++ b/openscholar/themes/custom/gking/css/gking.css
@@ -1346,6 +1346,10 @@ vertical-align: top;
 	display: table-cell;
 }
 
+.publication-cover-container {
+	min-width: 150px;
+}
+
 .biblio-upload-wrapper + .pubcontent-wrapper {
 display: block;
 clear: both;
