style the strong tag in the roadmap modal.

--- a/openscholar/themes/os_basetheme/css/global.pages.css
+++ b/openscholar/themes/os_basetheme/css/global.pages.css
@@ -867,6 +867,13 @@ font-size:18px;
 .page-roadmap .ui-dialog-content {
 max-height: 650px !important;
 }
+
+
+.page-roadmap .ui-dialog-content strong {
+display: block;
+margin: 15px 0;
+font-size: 16px;
+}
  
 /** MEDIA BROWSER MODAL OVERRIDES **/
 	
