--- a/openscholar/themes/os_basetheme/css/global.biblio.css
+++ b/openscholar/themes/os_basetheme/css/global.biblio.css
@@ -297,6 +297,7 @@ body.node-type-biblio .node-type-biblio .field-field-biblio-image {
 	padding:3px 6px;
 } 
 
+.os-files-other-list tr td.file,
 .os-files-other-list tr td.mime {
 	padding:3px;
 } 
@@ -304,6 +305,7 @@ body.node-type-biblio .node-type-biblio .field-field-biblio-image {
 
 .os-files-other-list tr td.size {
 	font-size:10px;
+	font-weight: bold;
 } 
 
 
