citation distribute form title get 2 lines, so adding 1em to the bottom margin will fix the space.

--- a/openscholar/themes/cp_theme/css/cp_theme.css
+++ b/openscholar/themes/cp_theme/css/cp_theme.css
@@ -788,6 +788,10 @@ form.node-form.overlay-processed .form-region-right fieldset {
      width: 100%;
 }
 
+form.node-form.overlay-processed .form-region-right fieldset.citation-distribute-form {
+  margin-bottom: 2em;
+}
+
 form.node-form.overlay-processed .form-region-right fieldset legend {
      background: none repeat scroll 0% 0% #F1F1F1;
 }
