place width on pub attached files section file size column.

--- a/openscholar/themes/os_basetheme/css/global.biblio.css
+++ b/openscholar/themes/os_basetheme/css/global.biblio.css
@@ -306,6 +306,7 @@ body.node-type-biblio .node-type-biblio .field-field-biblio-image {
 .os-files-other-list tr td.size {
 	font-size:10px;
 	font-weight: bold;
+	width: 31%;
 } 
 
 
