add css for attached files area in gking site. #5855

--- a/openscholar/themes/custom/gking/css/gking.css
+++ b/openscholar/themes/custom/gking/css/gking.css
@@ -1373,6 +1373,17 @@ clear: both;
 	text-decoration:underline;
 }
 
+#pub-cover-content-wrapper {
+display: table;
+clear: both;
+padding-top: 20px;
+}
+
+
+.pubcontent-wrapper {
+vertical-align: top;
+}
+
 /* TAXONOMY */
 
 body.section-category .node-teaser,
