adjust biblio attached files table widths etc. #5855

--- a/openscholar/themes/os_basetheme/css/global.biblio.css
+++ b/openscholar/themes/os_basetheme/css/global.biblio.css
@@ -298,15 +298,20 @@ body.node-type-biblio .node-type-biblio .field-field-biblio-image {
 } 
 
 .os-files-other-list tr td.file,
-.os-files-other-list tr td.mime {
+.os-files-other-list tr td.mime,
+.os-files-other-list tr td.size {
 	padding:3px;
 } 
 
 
+.os-files-other-list tr td.mime {
+	width:18px;
+} 
+
 .os-files-other-list tr td.size {
 	font-size:10px;
 	font-weight: bold;
-	width: 31%;
+	width: 40px;
 } 
 
 
