fix roadmap modal FF content width issue.

--- a/openscholar/themes/os_basetheme/css/global.pages.css
+++ b/openscholar/themes/os_basetheme/css/global.pages.css
@@ -853,6 +853,12 @@ margin-bottom:20px;
 padding: 2em;
 }
 
+@-moz-document url-prefix() { 
+.page-roadmap  .ui-dialog .ui-dialog-content {
+width: calc(100% - 4em) !important;
+	}
+}
+
 
 .page-roadmap .ui-icon-closethick {
 background: url('../images/icon-close-window.png') no-repeat;
