add query to end of sprite img refer so it clears cache.

--- a/openscholar/themes/cp_theme/css/cp_theme.css
+++ b/openscholar/themes/cp_theme/css/cp_theme.css
@@ -958,7 +958,7 @@ width: 195px;
 
 #edit-biblio-url-title {
 	border:none;
-	background: url('../images/scholarbase-sprite.png') no-repeat 0 -475px #FFFFFF;
+	background: url('../images/scholarbase-sprite.png?apr2014') no-repeat 0 -475px #FFFFFF;
     padding-left:25px;
 	color: #0074BD;
 	text-decoration:underline;
