add some icons to expand / collapse taxo terms section. #6001

--- a/openscholar/themes/cp_theme/css/cp_theme.css
+++ b/openscholar/themes/cp_theme/css/cp_theme.css
@@ -939,6 +939,22 @@ ul.term-reference-tree-level {
   background: url('../images/scholarbase-sprite.png') 6px -433px no-repeat;
 }
 
+
+.field-widget-og-vocab-complex .expand {
+	 background: url('../images/scholarbase-sprite.png?sddff') 0 -509px no-repeat;
+	 padding-left:14px;
+}
+
+.field-widget-og-vocab-complex .collapse {
+	 background: url('../images/scholarbase-sprite.png?sddff') 0 -529px no-repeat;
+	 padding-left:14px;
+	 margin-left:10px;
+}
+
+
+
+
+
 /* PUB FORM EXTERNAL URL SECTIONON */
 
 #edit-url .form-item-biblio-url-title {
@@ -969,9 +985,8 @@ background: url('../../../themes/os_basetheme/images/form-input-bg.gif') repeat-
 border: 1px solid #CDCDCD;
 padding-left:0;
 color: #444;
-	text-decoration:none;
+text-decoration:none;
 }
-
 
 
 #edit-url .form-item-biblio-url .description {
